# Machine-Learning-Approaches-to-3D-Point-Cloud-Based-Defect-Detection-in-Buildings

./: README.md  pointcloud.ply
DefectDetector3D/: app.py  app_pages.py  defect_detection.py  defect_detection_pyqt.py  help.py  main.py  preprocessing.py  pyproject.toml  pyqt_info.py  replit.nix  reporting.py  settings.py  utils.py  utils_pyqt.py  visualization.py  visualization_pyqt.py
DefectDetector3D/attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1742710206870.txt
DefectDetector3D/static/: script.js  style.css
DefectDetector3D/ui/: comparative_analysis.py  dashboard.py  defect_detection.py  history.py  settings.py  visualization.py
