[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "open3d>=0.19.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyopengl>=3.1.9",
    "pyopengl-accelerate>=3.1.9",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "streamlit>=1.43.2",
]
